--- a/test/demo.html
+++ b/test/demo.html
@@ -7,7 +7,7 @@
         @import "demo.css";
     </style>
     <script>
-        const hello = require('./common')
+        const hello = require('./demo')
         console.info(hello())
     </script>
 </head>
